mdapipkg/objects/DocusignCustomSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Captures all the DocuSign Account Information &amp; DocuSign System Sender User Information</description>
    <fields>
        <fullName>DocusignAccountID__c</fullName>
        <label>DocusignAccountID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratorKey__c</fullName>
        <label>IntegratorKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Url__c</fullName>
        <label>Live Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <label>TemplateId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_URL__c</fullName>
        <label>Test URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DocusignCustomSetting</label>
</CustomObject>